--- a/src/components/layouts/Header/Header.module.scss
+++ b/src/components/layouts/Header/Header.module.scss
@@ -141,7 +141,7 @@ header.topSiteHeader {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  z-index: -1;
+  z-index: 2;
   top: 0;
   right: 0;
   width: 320px;
@@ -221,6 +221,7 @@ header.topSiteHeader {
     z-index: -2;
     .outerLinks {
       padding-bottom: 40px;
+      margin-bottom: 40px;
     }
     &.activeMenu {
       transform: translate(0, 0);
